fix(env): Update JMAP server URL to the correct endpoint and bump version to 1.0.0 fix(email-composer): Ensure identity is selected before sending email fix(jmap-client): Improve identity fetching logic and handle fallback scenarios

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ NEXT_PUBLIC_APP_NAME=JMAP Webmail
 
 # JMAP server URL (required)
 # This is the URL of your JMAP-compatible mail server
-NEXT_PUBLIC_JMAP_SERVER_URL=https://your-jmap-server.com
+NEXT_PUBLIC_JMAP_SERVER_URL=https://hivepost.nl
